--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-dark-mode": "^1.1.7",
     "vite": "^4.3.2"
   }
 }
